manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: codiac-gateway
  namespace: nginx-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
  - name: tcp-sftp
    port: 22
    protocol: TCP
    allowedRoutes:
      kinds:
      - kind: TCPRoute
        group: gateway.networking.k8s.io
      namespaces:
        from: All
